# rust

./: .gitignore  README.md
rs_cli/: Cargo.toml
rs_cli/benches/: bench.rs
rs_cli/src/: calculator.rs  error.rs  global.rs  lib.rs  main.rs  response.rs
rs_cli/src/advent_of_code/twenty_fifteen/: mod.rs  one.rs  three.rs  two.rs
rs_cli/src/calculator/: mod.rs  utils.rs
rs_cli/src/global/: mod.rs  str_utils.rs
rs_cli/src/process_args/: calc.rs  mod.rs  pr_img.rs  utils.rs
rs_cli/src/process_args/pr_img/: ascii_art.rs  color_scale.rs  filter.rs  mod.rs  pixelate.rs  resize.rs
rs_cli/src/process_img/: color_scale.rs  colors.rs  mod.rs  models.rs  pixelate.rs  utils.rs
rs_cli/src/process_img/colors/: mod.rs  traits.rs  utils.rs
rs_cli/src/process_img/filter/: blur.rs  box.rs  median.rs  mod.rs
rs_cli/src/process_img/resize/: bicubic.rs  bilinear.rs  mod.rs
