[package]
name = "rs_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
colored = "2"
image = "0.24.7"
# rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 3 